--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -101,7 +101,7 @@
   },
   "peerDependencies": {
     "@types/react": "^18.2.6",
-    "react": "^19.0.0-rc-fb9a90fa48-20240614"
+    "react": "^18.2.0"
   },
   "peerDependenciesMeta": {
     "@types/react": {
@@ -139,7 +139,7 @@
     "react-devtools-core": "^5.3.1",
     "react-refresh": "^0.14.0",
     "regenerator-runtime": "^0.13.2",
-    "scheduler": "0.25.0-rc-fb9a90fa48-20240614",
+    "scheduler": "0.24.0-canary-efb381bbf-20230505",
     "semver": "^7.1.3",
     "stacktrace-parser": "^0.1.10",
     "whatwg-fetch": "^3.0.0",
