--- a/packages/rn-tester/package.json
+++ b/packages/rn-tester/package.json
@@ -30,7 +30,7 @@
     "nullthrows": "^1.1.1"
   },
   "peerDependencies": {
-    "react": "19.0.0-rc-fb9a90fa48-20240614",
+    "react": "18.3.1",
     "react-native": "*"
   },
   "codegenConfig": {
