--- a/packages/eslint-plugin-react-native/package.json
+++ b/packages/eslint-plugin-react-native/package.json
@@ -19,5 +19,27 @@
   "engines": {
     "node": ">=18"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.20.0",
+    "@react-native/eslint-plugin": "0.76.0-main",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-ft-flow": "^3.0.7",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0"
+  },
+  "peerDependencies": {
+    "eslint": ">=8",
+    "prettier": ">=2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "prettier": "2.8.8"
+  }
 }
