--- a/.github/actions/create-release/action.yml
+++ b/.github/actions/create-release/action.yml
@@ -32,7 +32,7 @@ runs:
         GIT_PAGER=cat git show HEAD
     - name: Update "latest" tag if needed
       shell: bash
-      if: ${{ inputs.tag == 'latest' }}
+      if: ${{ inputs.is_latest_on_npm == 'true' }}
       run: |
         git tag -d "latest"
         git push origin :latest
