Remove references to old template
There are old references to the react-native/template. This code has
moved to react-native-community/template.

Changelog: [Internal]

closes facebook/metro#1324

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,5 @@
 [ignore]
-; Ignore templates for 'react-native init'
-<PROJECT_ROOT>/packages/react-native/template/.*
+; Ignore build cache folder
 <PROJECT_ROOT>/packages/react-native/sdks/.*
 
 ; Ignore the codegen e2e tests
