fix(react-native-codegen): scripts require `yargs` (#45995)

--- a/packages/react-native-codegen/package.json
+++ b/packages/react-native-codegen/package.json
@@ -35,7 +35,8 @@
     "invariant": "^2.2.4",
     "jscodeshift": "^0.14.0",
     "mkdirp": "^0.5.1",
-    "nullthrows": "^1.1.1"
+    "nullthrows": "^1.1.1",
+    "yargs": "^17.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -52,8 +53,7 @@
     "hermes-estree": "0.22.0",
     "micromatch": "^4.0.4",
     "prettier": "2.8.8",
-    "rimraf": "^3.0.2",
-    "yargs": "^17.6.2"
+    "rimraf": "^3.0.2"
   },
   "peerDependencies": {
     "@babel/preset-env": "^7.1.6"
