--- a/packages/community-cli-plugin/package.json
+++ b/packages/community-cli-plugin/package.json
@@ -22,8 +22,8 @@
     "dist"
   ],
   "dependencies": {
-    "@react-native-community/cli-server-api": "14.0.0-alpha.11",
-    "@react-native-community/cli-tools": "14.0.0-alpha.11",
+    "@react-native-community/cli-server-api": "14.0.1",
+    "@react-native-community/cli-tools": "14.0.1",
     "@react-native/dev-middleware": "0.75.1",
     "@react-native/metro-babel-transformer": "0.75.1",
     "chalk": "^4.0.0",
