--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -124,6 +124,7 @@
     "ansi-regex": "^5.0.0",
     "base64-js": "^1.5.1",
     "chalk": "^4.0.0",
+    "commander": "^12.0.0",
     "event-target-shim": "^5.0.1",
     "flow-enums-runtime": "^0.0.6",
     "glob": "^7.1.1",
