fix: `local-cli` is missing from published package (#2182)

--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -44,6 +44,7 @@
     "jest",
     "Libraries",
     "LICENSE",
+    "local-cli",
     "React-Core.podspec",
     "react-native.config.js",
     "React.podspec",
