--- a/packages/rn-tester/package.json
+++ b/packages/rn-tester/package.json
@@ -42,8 +42,8 @@
     }
   },
   "devDependencies": {
-    "@react-native-community/cli": "^14.0.0",
-    "@react-native-community/cli-platform-android": "^14.0.0",
-    "@react-native-community/cli-platform-ios": "^14.0.0"
+    "@react-native-community/cli": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-ios": "15.0.0-alpha.2"
   }
 }
