--- a/packages/react-native-babel-preset/package.json
+++ b/packages/react-native-babel-preset/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native/babel-preset",
-  "version": "0.76.0-rc.0",
+  "version": "0.76.0-main",
   "description": "Babel preset for React Native applications",
   "main": "src/index.js",
   "repository": {
@@ -56,7 +56,7 @@
     "@babel/plugin-transform-typescript": "^7.25.2",
     "@babel/plugin-transform-unicode-regex": "^7.24.7",
     "@babel/template": "^7.25.0",
-    "@react-native/babel-plugin-codegen": "0.76.0-rc.0",
+    "@react-native/babel-plugin-codegen": "0.76.0-main",
     "babel-plugin-transform-flow-enums": "^0.0.2",
     "react-refresh": "^0.14.0"
   },
