--- a/packages/react-native-bots/package.json
+++ b/packages/react-native-bots/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-native/bots",
   "description": "React Native Bots",
-  "version": "0.76.0-rc.0",
+  "version": "0.76.0-main",
   "private": true,
   "license": "MIT",
   "repository": {
