--- a/packages/react-native-info/package.json
+++ b/packages/react-native-info/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-info",
-  "version": "0.76.0-rc.0",
+  "version": "0.76.0-main",
   "main": "build/index.js",
   "license": "MIT",
   "private": true,
