--- a/packages/community-cli-plugin/package.json
+++ b/packages/community-cli-plugin/package.json
@@ -26,14 +26,14 @@
     "@react-native/metro-babel-transformer": "0.76.0-rc.0",
     "chalk": "^4.0.0",
     "execa": "^5.1.1",
-    "metro": "^0.80.10",
-    "metro-config": "^0.80.10",
-    "metro-core": "^0.80.10",
+    "metro": "^0.81.0-alpha.0",
+    "metro-config": "^0.81.0-alpha.0",
+    "metro-core": "^0.81.0-alpha.0",
     "node-fetch": "^2.2.0",
     "readline": "^1.3.0"
   },
   "devDependencies": {
-    "metro-resolver": "^0.80.10"
+    "metro-resolver": "^0.81.0-alpha.0"
   },
   "peerDependencies": {
     "@react-native-community/cli-server-api": "*"
