--- a/packages/metro-config/package.json
+++ b/packages/metro-config/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@react-native/js-polyfills": "0.76.0-rc.0",
     "@react-native/metro-babel-transformer": "0.76.0-rc.0",
-    "metro-config": "^0.80.10",
-    "metro-runtime": "^0.80.10"
+    "metro-config": "^0.81.0-alpha.0",
+    "metro-runtime": "^0.81.0-alpha.0"
   }
 }
