--- a/.github/workflows/trigger-e2e-on-comment.yml
+++ b/.github/workflows/trigger-e2e-on-comment.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/test-e2e')
     steps:
+      # This is needed because of https://github.com/actions/runner-images/issues/6283
+      # TL;DR: brew is not in the PATH anymore.
+      - name: Setup Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
       - name: Install jq
         run: brew install jq
       - name: Run E2E Tests
