--- a/packages/eslint-plugin-specs/package.json
+++ b/packages/eslint-plugin-specs/package.json
@@ -27,7 +27,7 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-flow-strip-types": "^7.25.2",
     "@babel/preset-flow": "^7.24.7",
-    "@react-native/codegen": "0.77.0-main",
+    "@react-native/codegen": "0.76.0-rc.2",
     "make-dir": "^2.1.0",
     "pirates": "^4.0.1",
     "source-map-support": "0.5.0"
