test: pressable test cases

--- a/packages/rn-tester/.maestro/pressable.yml
+++ b/packages/rn-tester/.maestro/pressable.yml
@@ -21,3 +21,28 @@ appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebo
     id: "one_press_me_button"
 - assertVisible:
     text: "2x onPress"
+- scrollUntilVisible:
+    element:
+      id: "pressable_feedback_events"
+    direction: DOWN
+    speed: 10
+    visibilityPercentage: 100
+- tapOn:
+    id: "pressable_feedback_events_button"
+- scrollUntilVisible:
+    element:
+      text: "pressIn"
+    direction: DOWN
+    speed: 10
+- assertVisible:
+    text: "press"
+- assertVisible:
+    text: "pressOut"
+- longPressOn:
+    id: "pressable_feedback_events_button"
+- assertVisible:
+    text: "pressIn"
+- assertVisible:
+    text: "longPress"
+- assertVisible:
+    text: "pressOut"
