--- a/packages/rn-tester/.maestro/new-arch-examples.yml
+++ b/packages/rn-tester/.maestro/new-arch-examples.yml
@@ -30,3 +30,6 @@ appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebo
     text: "Fire Legacy Style Event"
     repeat: 10
 - assertVisible: "Legacy Style Event Fired 10 times"
+- assertVisible: "Opacity: 1"
+- tapOn: "Set Opacity"
+- assertVisible: "Opacity: 0.8"
