fix(react-native): implement `projectConfig` and `dependencyConfig` (#2231)

--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -113,6 +113,7 @@
     "@jest/create-cache-key-function": "^29.6.3",
     "@react-native-community/cli": "14.0.0-alpha.2",
     "@react-native-community/cli-platform-android": "14.0.0-alpha.2",
+    "@react-native-community/cli-platform-apple": "14.0.0-alpha.2",
     "@react-native-community/cli-platform-ios": "14.0.0-alpha.2",
     "@react-native-mac/virtualized-lists": "0.75.0-main",
     "@react-native/assets-registry": "0.75.0-main",
