ci(0.76): prepare to publish 0.76.0 (#2252)
* ci: Publish React Native macOS 0.76.0

* Use`  -ready` prefix

* Use latest virtualized lists

* ci: Use Ubuntu for publish job (#2256)

* Revert "ci: Use the same VM image for PR and publish"

This reverts commit e2b637437022414c579b8e9df165e803bbacb77b.

* ci: specify publish pool with `os`

* Use Ubuntu instead

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -21,7 +21,7 @@ variables:
     value: production,externalfacing
   # Remember to update this in previous stable branches when creating a new stable branch
   - name : latestStableBranch
-    value: '0.75-stable'
+    value: '0.76-stable'
 
 resources:
   repositories:
@@ -55,7 +55,9 @@ extends:
          - job: RNGithubNpmJSPublish
            displayName: NPM Publish React-native-macos
            pool:
-             vmImage: $(vmImageApple)
+             name: cxeiss-ubuntu-20-04-large
+             image: cxe-ubuntu-20-04-1es-pt
+             os: linux
            variables:
              - name: BUILDSECMON_OPT_IN
                value: true
@@ -83,13 +85,6 @@ extends:
                - template: .ado/templates/apple-steps-publish.yml@self
                  parameters:
                    build_type: nightly
-             - ${{ elseif endsWith(variables['Build.SourceBranchName'], '0.76-stable') }}:
-                - task: CmdLine@2
-                  displayName: "Skip 0.76-stable"
-                  inputs:
-                    script: |
-                      echo "Skipping publish for branch $(Build.SourceBranchName)"
-                      exit 1
              - ${{ elseif endsWith(variables['Build.SourceBranchName'], '-stable') }}:
                - template: .ado/templates/apple-steps-publish.yml@self
                  parameters:
