ci: Downgrade to Xcode 15, don't run `pod install` with `react-native-macos-init` (#2271)
* Revert "chore(ci): Update to Xcode 16 (#2207)"

This reverts commit 9bf6051fa79c4e748fbe1ee1b7736b2a2436aaab.

* Update generate-macos.js

* Update index.js

* Update test-react-native-macos-init.yml

* Update index.js

--- a/.ado/jobs/test-react-native-macos-init.yml
+++ b/.ado/jobs/test-react-native-macos-init.yml
@@ -54,7 +54,7 @@ jobs:
           # We need to set the npm registry here otherwise it won't stick
           $(Build.Repository.LocalPath)/.ado/scripts/verdaccio.sh configure
           node $(Build.Repository.LocalPath)/packages/react-native-macos-init/bin.js --verbose --version latest --overwrite --prerelease
-          yarn why react-native-macos
+          pod install --project-directory=macos
         workingDirectory: $(Agent.BuildDirectory)/testcli
         displayName: Apply macOS template (new project)
 
