--- a/packages/rn-tester/Podfile
+++ b/packages/rn-tester/Podfile
@@ -1,5 +1,3 @@
-ENV['RCT_NEW_ARCH_ENABLED'] = '0'
-
 require_relative '../react-native/scripts/react_native_pods'
 
 source 'https://cdn.cocoapods.org/'
@@ -37,7 +35,7 @@ end
 def pods(target_name, options = {})
   project 'RNTesterPods.xcodeproj'
 
-  fabric_enabled = false
+  fabric_enabled = true
 
   # Hermes is now enabled by default.
   # The following line will only disable Hermes if the USE_HERMES envvar is SET to a value other than 1 (e.g. USE_HERMES=0).
@@ -51,7 +49,6 @@ def pods(target_name, options = {})
     app_path: "#{Dir.pwd}",
     config_file_dir: "#{Dir.pwd}/node_modules",
     production: false, #deprecated
-    :new_arch_enabled => false # Disable the New Architecture
   )
   pod 'ReactCommon-Samples', :path => "#{@prefix_path}/ReactCommon/react/nativemodule/samples"
 
