feat: migrate jsc-android to mavenCentral

--- a/packages/react-native/ReactCommon/jsc/CMakeLists.txt
+++ b/packages/react-native/ReactCommon/jsc/CMakeLists.txt
@@ -10,6 +10,15 @@
 cmake_minimum_required(VERSION 3.13)
 set(CMAKE_VERBOSE_MAKEFILE on)
 
+# Copy jsc headers into JavaScriptCore subdirectory
+get_target_property(JSC_PREFAB_INCLUDE_DIR jsc INTERFACE_INCLUDE_DIRECTORIES)
+set(JSC_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)
+file(MAKE_DIRECTORY ${JSC_INCLUDE_DIR})
+file(GLOB JSC_HEADERS "${JSC_PREFAB_INCLUDE_DIR}/*.h")
+foreach(HEADER ${JSC_HEADERS})
+        file(COPY ${HEADER} DESTINATION "${JSC_INCLUDE_DIR}/JavaScriptCore")
+endforeach()
+
 add_compile_options(
         -fexceptions
         -frtti
@@ -25,6 +34,7 @@ add_library(jscruntime
         JSCRuntime.cpp)
 
 target_include_directories(jscruntime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(jscruntime PRIVATE ${JSC_INCLUDE_DIR})
 target_merge_so(jscruntime)
 
 target_link_libraries(jscruntime
