--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -111,13 +111,13 @@
   },
   "dependencies": {
     "@jest/create-cache-key-function": "^29.6.3",
-    "@react-native-mac/virtualized-lists": "0.76.4",
-    "@react-native/assets-registry": "0.76.4",
-    "@react-native/codegen": "0.76.4",
-    "@react-native/community-cli-plugin": "0.76.4",
-    "@react-native/gradle-plugin": "0.76.4",
-    "@react-native/js-polyfills": "0.76.4",
-    "@react-native/normalize-colors": "0.76.4",
+    "@react-native-mac/virtualized-lists": "workspace:*",
+    "@react-native/assets-registry": "0.76.3",
+    "@react-native/codegen": "0.76.3",
+    "@react-native/community-cli-plugin": "0.76.3",
+    "@react-native/gradle-plugin": "0.76.3",
+    "@react-native/js-polyfills": "0.76.3",
+    "@react-native/normalize-colors": "0.76.3",
     "abort-controller": "^3.0.0",
     "anser": "^1.4.9",
     "ansi-regex": "^5.0.0",
@@ -148,9 +148,6 @@
     "whatwg-fetch": "^3.0.0",
     "ws": "^6.2.3",
     "yargs": "^17.6.2"
-  },
-  "beachball": {
-    "shouldPublish": false
   },
   "codegenConfig": {
     "libraries": [
