ci(0.76): more publish pipeline fixes (#2318)
* chore(0.76): don't use `workspace:*` dependencies in react-native-macos

* ci: rename `npm-publish` to `npm-publish-steps`

* ci: move xcode-select into apple-tools-setup

* ci: split nx release into two

--- a/.ado/templates/npm-publish-steps.yml
+++ b/.ado/templates/npm-publish-steps.yml
@@ -3,6 +3,8 @@ parameters:
   publishTag: 'latest'
 
 steps:
+  - template: /.ado/templates/configure-git.yml@self
+
   - script: |
       yarn install
     displayName: Install npm dependencies
@@ -19,7 +21,8 @@ steps:
 
   - script: |
       git switch $(Build.SourceBranchName)
-      yarn nx release --yes --verbose
+      yarn nx release --skip-publish --verbose
+      yarn nx release publish --excludeTaskDependencies
     env:
       GITHUB_TOKEN: $(githubAuthToken)
       NODE_AUTH_TOKEN: $(npmAuthToken)
