--- a/.ado/templates/apple-tools-setup.yml
+++ b/.ado/templates/apple-tools-setup.yml
@@ -9,4 +9,6 @@ steps:
       script: |
         brew bundle --file .ado/Brewfile
 
-  - template: /.ado/templates/apple-xcode-select.yml@self
+  - script: |
+      sudo xcode-select --switch $(xcode_version)
+    displayName: Use $(xcode_friendly_name)
